# chordboard-invaders

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
apps/typing_invaders/: CMakeLists.txt  aliens.c  aliens.h  fb.c  fb.h  game.c  game.h  haptic.c  haptic.h  hints.c  hints.h  hiscore.c  hiscore.h  hiscore_flash.c  hiscore_flash.h  ledfx.c  ledfx.h  main.c  render.c  render.h  sfx.c  sfx.h  sfx_ring.c  sfx_ring.h  shake.c  shake.h  words.c  words.h
docs/superpowers/plans/: 2026-07-23-typing-invaders.md
docs/superpowers/specs/: 2026-07-22-typing-invaders-design.md
tests/: CMakeLists.txt  test_aliens.c  test_fb.c  test_game_boss.c  test_game_core.c  test_game_typing.c  test_hints.c  test_hiscore.c  test_render.c  test_sfx.c  test_shake.c  test_util.h  test_words.c
tools/: fw  fw.cmd  fw.py
